--- a/myApp/app/components/home/home.view.html
+++ b/myApp/app/components/home/home.view.html
@@ -1,11 +1,15 @@
 <div class="home-view-container">
   <div class="row">
+
+    <!-- BUTTON 1 -->
     <div class="col-md-2">
       <tooltip-button button-text="button1.text" tooltip="button1.tooltip" on-open="onOpen(id)"></tooltip-button>
     </div>
 
+    <!-- BUTTON 2 -->
     <div class="col-md-2">
       <tooltip-button tooltip="button2.tooltip" on-open="onOpen(id)"></tooltip-button>
     </div>
+
   </div>
 </div>
