updated the button to be standalone

--- a/myApp/app/components/home/home.view.html
+++ b/myApp/app/components/home/home.view.html
@@ -3,12 +3,12 @@
 
     <!-- BUTTON 1 -->
     <div class="col-md-2">
-      <tooltip-button button-text="button1.text" tooltip="button1.tooltip" on-open="onOpen(id)"></tooltip-button>
+      <tooltip-button button-text="button1.text" tooltip="button1.tooltip"></tooltip-button>
     </div>
 
     <!-- BUTTON 2 -->
     <div class="col-md-2">
-      <tooltip-button tooltip="button2.tooltip" on-open="onOpen(id)"></tooltip-button>
+      <tooltip-button></tooltip-button>
     </div>
 
   </div>
